Caption adds to photo

--- a/android_app/app/src/main/res/values/strings.xml
+++ b/android_app/app/src/main/res/values/strings.xml
@@ -73,6 +73,7 @@
     <string name="cool">COOL</string>
     <string name="edit">EDIT</string>
     <string name="upload">UPLOAD</string>
+    <string name="add_caption">ADD CAPTION</string>
 
 
     <string name="element_text">Element</string>
